test/files/neg/t12026.check
t12026.scala:11: warning: discarded non-Unit value of type Int
  def f(): Unit = v()
                   ^
error: No warnings can be incurred under -Werror.
1 warning
1 error
